force-app/main/default/objects/BI_Metric_Fields__mdt/BI_Metric_Fields__mdt.object-meta.xml
<CustomObject>
    <description>For each object, list the fields to be tracked.</description>
    <label>Sales BI Metric Field</label>
    <pluralLabel>Sales BI Metric Field</pluralLabel>
</CustomObject>