force-app/main/default/objects/BI_Metric_Fields__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the field currently being tracked?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>