force-app/main/default/objects/BI_Metric_Fields__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Exact API Name of the field to be tracked. If this is to be client facing, consider using Schema methods to populate a picklist listing all available objects.</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>