force-app/main/default/objects/BI_Metric_Fields__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Exact API name of the object to be tracked. If this is to be client-facing, consider use Schema describe to build a picklist on the client side to avoid illegal values.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>